--- a/mobile/GAHDSE241F-tourio/app/src/main/AndroidManifest.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/AndroidManifest.xml
@@ -53,8 +53,14 @@
 
         <activity android:name=".HotelDashBoardActivity"/>
 
+        <activity android:name=".MapsPageActivity"/>
+
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
 </manifest>
