--- a/backend/tourio/package.json
+++ b/backend/tourio/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.3.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^5.0.0",
     "stripe": "^18.1.0"
   },
   "devDependencies": {
