--- a/mobile/GAHDSE241F-tourio/app/src/main/AndroidManifest.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
 
         <activity android:name=".HotelTourBookingsActivity"/>
 
+        <activity android:name=".OngoingTourActivity"/>
+
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
