Hotel admin - hotel ongoing tours fetch with destinations page

--- a/mobile/GAHDSE241F-tourio/app/src/main/AndroidManifest.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
 
         <activity android:name=".OngoingTourActivity"/>
 
+        <activity android:name=".HotelOngoingTourActivity"/>
+
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
