--- a/backend/tourio/package.json
+++ b/backend/tourio/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.3.0",
     "leaflet": "^1.9.4",
+    "ml-knn": "^3.0.0",
     "ngrok": "^5.0.0-beta.2",
     "react-leaflet": "^5.0.0",
     "stripe": "^18.1.0"
